@@ -1,11 +1,11 @@
 /**
  * This is JUnit that tests the lower method in StringHandling class.
  * This contains 79 testcases.
- * 
+ *
  * Please don"t run this file.
- * You can add your own test cases to this file by just copy and 
+ * You can add your own test cases to this file by just copy and
  * paste the last three lines of the code (TestCase6).
- * 
+ *
  * @author Deepak Kumar
  */
 
@@ -38,7 +38,7 @@ public void testCase1() {
   symbolTable.deleteMin();
   Assert.assertEquals(true, symbolTable.contains("C"));
   // String[] arr = {"C","E","H","L","M","P","R","S","X"};
-  List<String> arr = new ArrayList<String>(List.of("C","E","H","L","M","P","R","S","X"));
+  List<String> arr = new ArrayList<String>(Arrays.asList("C","E","H","L","M","P","R","S","X"));
   String res = "";
   for(String s: arr){
   	res += s + " ";
@@ -66,7 +66,7 @@ public void testCase2() {
   symbolTable.deleteMin();
   symbolTable.deleteMin();
   Assert.assertEquals("Y", symbolTable.max());
-  List<String> arr = new ArrayList<String>(List.of("O","Q","S","T","U","Y"));
+  List<String> arr = new ArrayList<String>(Arrays.asList("O","Q","S","T","U","Y"));
   String res = "";
   for(String s: arr){
   	res += s + " ";
@@ -94,7 +94,7 @@ public void testCase3() {
   symbolTable.put("E",10);
   Assert.assertEquals("X", symbolTable.max());
   symbolTable.deleteMin();
-  List<String> arr = new ArrayList<String>(List.of("E","L","M","O","P","R", "S", "T", "X"));
+  List<String> arr = new ArrayList<String>(Arrays.asList("E","L","M","O","P","R", "S", "T", "X"));
   String res = "";
   for(String s: arr){
   	res += s + " ";
@@ -114,4 +114,3 @@ public void testCase3() {
 }
 
 }
-
